--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,7 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/node,macos,windows,pycharm,webstorm
 
 web/node_modules/*
+
+
+# Server config file
+config.js
