--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.5.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "crypto": "0.0.3",
     "ejs": "^2.5.6",
@@ -18,8 +19,11 @@
     "express-method-override": "0.0.3",
     "express-session": "^1.15.3",
     "mongoose": "^4.10.5",
+    "nodejs-aes256": "^1.0.1",
     "nodemailer": "^4.0.1",
     "nodemailer-smtp-pool": "^2.8.3",
+    "sprintf-js": "^1.1.1",
+    "string-format-js-alt": "^0.1.6",
     "styliner": "^1.0.3"
   }
 }
