--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,8 +14,10 @@
     "react-dom": "^15.6.1",
     "react-file-input": "^0.2.5",
     "react-modal": "^2.2.2",
+    "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,6 +26,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.23.0"
+    "babel-polyfill": "^6.23.0",
+    "redux-devtools": "^3.4.0"
   }
 }
