--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -16,9 +16,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".activities.MainActivity" />
-        <activity android:name=".activities.Prokect"></activity>
+        <activity android:name=".activities.MainActivity" >
+
+        </activity>
+        <activity
+            android:name=".activities.ProjectAndStudyActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
