--- a/application/app/build.gradle
+++ b/application/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
