--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:theme="@style/Theme.AppCompat.NoActionBar">
 
         </activity>
+        
+        <activity android:name=".activities.FreeBoardActivity"/>
+        <activity android:name=".activities.FreeBoardDetailActivity"/>
+        <activity android:name=".activities.FreeBoardPostingActivity"/>
+
     </application>
 
 </manifest>
