--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -11,26 +11,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
-        <activity android:name=".activities.MainActivity" >
-
-        </activity>
+        <activity android:name=".activities.MainActivity"></activity>
         <activity
             android:name=".activities.ProjectAndStudyActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+        <activity android:name=".activities.FreeBoardActivity"></activity>
+        <activity android:name=".activities.FreeBoardDetailActivity" />
+        <activity android:name=".activities.FreeBoardPostingActivity" />
+        <activity android:name=".activities.IntroActivity"   android:theme="@style/Theme.AppCompat.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        
-        <activity android:name=".activities.FreeBoardActivity"/>
-        <activity android:name=".activities.FreeBoardDetailActivity"/>
-        <activity android:name=".activities.FreeBoardPostingActivity"/>
-
     </application>
 
 </manifest>
