add FreeBoard, Freeboard detail page, Posting page

--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -13,19 +13,23 @@
         <activity android:name=".activities.LoginActivity">
 
         </activity>
-        <activity android:name=".activities.MainActivity"></activity>
-        <activity
-            android:name=".activities.ProjectAndStudyActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
-        <activity android:name=".activities.FreeBoardActivity"></activity>
-        <activity android:name=".activities.FreeBoardDetailActivity" />
-        <activity android:name=".activities.FreeBoardPostingActivity" />
-        <activity android:name=".activities.IntroActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.ProjectAndStudyActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+        <activity android:name=".activities.FreeBoardActivity">
+
+        </activity>
+        <activity android:name=".activities.FreeBoardDetailActivity" />
+        <activity android:name=".activities.FreeBoardPostingActivity" />
+        <activity android:name=".activities.IntroActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+
         </activity>
     </application>
 
