--- a/application/app/build.gradle
+++ b/application/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
