--- a/application/app/build.gradle
+++ b/application/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.florent37:bubbletab:1.0.0'
     compile 'com.android.support:support-v4:26.+'
+    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     testCompile 'junit:junit:4.12'
 }
