--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -17,23 +17,31 @@
 
         </activity>
         <activity android:name=".activities.FreeBoardActivity">
-
         </activity>
+        <activity android:name=".dialogs.AddContestDialog"/>
+        <activity android:name=".dialogs.AddProjectDialog"/>
         <activity android:name=".activities.FreeBoardDetailActivity" />
         <activity android:name=".activities.FreeBoardPostingActivity" />
-        <activity android:name=".activities.IntroActivity"
+        <activity
+            android:name=".activities.IntroActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
 
         </activity>
-        <activity android:name=".activities.ContestActivity"/>
-        <activity android:name=".activities.MentoringActivity"/>
-        <activity android:name=".activities.DetailActivity"/>
-        <activity android:name=".activities.ProjectActivity">
+        <activity android:name=".activities.ContestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.MentoringActivity" />
+        <activity android:name=".activities.DetailActivity" />
+        <activity android:name=".activities.ProjectActivity"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera2" />
 </manifest>
