--- a/dsm-community/package.json
+++ b/dsm-community/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-event-calendar": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vue-validator": "^3.0.0-alpha.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
