--- a/dsm-community/package.json
+++ b/dsm-community/package.json
@@ -2,7 +2,7 @@
   "name": "dsm-community",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "",
+  "author": "sinabro",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
