--- a/dsm-community/.gitignore
+++ b/dsm-community/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules/**
-node_modules/vue-event-calendar
+!node_modules/vue-event-calendar
 dist/
 npm-debug.log*
 yarn-debug.log*
