--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity android:name=".activities.FreeBoardActivity">
         </activity>
-        <activity android:name=".dialogs.AddContestDialog"/>
+        <activity android:name=".dialogs.AddRecruitDialog"/>
         <activity android:name=".dialogs.AddProjectDialog"/>
         <activity android:name=".activities.FreeBoardDetailActivity" />
         <activity android:name=".activities.FreeBoardPostingActivity" />
@@ -31,9 +31,9 @@
             android:name=".activities.IntroActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
-        <activity android:name=".activities.ClubActivity"/>
+        <activity android:name=".activities.RecruitActivity"/>
         <activity android:name=".activities.StudyActivity"/>
-        <activity android:name=".activities.ContestActivity">
+        <activity android:name=".activities.ListActivity">
         </activity>
         <activity android:name=".activities.MentoringActivity" />
         <activity android:name=".activities.DetailActivity" />
