--- a/dsm-community/package.json
+++ b/dsm-community/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "vue": "^2.5.2",
     "vue-event-calendar": "^1.5.1",
     "vue-router": "^3.0.1",
