--- a/dsm-community/package.json
+++ b/dsm-community/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-awesome": "^2.3.4",
     "vue-event-calendar": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-validator": "^3.0.0-alpha.2"
