[DONE] using swagger-jsdoc

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,7 +12,7 @@
   "dependencies": {
     "async": "^2.5.0",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "crypto": "0.0.3",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
@@ -21,8 +22,11 @@
     "jsonwebtoken": "^7.4.2",
     "mongoose": "^4.10.5",
     "morgan": "^1.8.2",
+    "node-schedule": "^1.2.5",
     "nodemailer": "^4.0.1",
     "nodemailer-smtp-pool": "^2.8.3",
-    "styliner": "^1.0.3"
+    "styliner": "^1.0.3",
+    "swagger-jsdoc": "^1.9.7",
+    "uuid-v4": "^0.1.0"
   }
 }
