--- a/dsm-community/package.json
+++ b/dsm-community/package.json
@@ -5,7 +5,7 @@
   "author": "sinabro",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "node build/dev-server.js --host 0.0.0.0",
     "start": "npm run dev",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
