--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -9,27 +9,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.LoginActivity">
-
-        </activity>
-        <activity android:name=".activities.MainActivity">
-
-        </activity>
+        <activity android:name=".activities.LoginActivity"></activity>
+        <activity android:name=".activities.MainActivity"></activity>
         <activity
             android:name=".activities.ProjectAndStudyActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
-        <activity android:name=".activities.FreeBoardActivity">
-
-        </activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".activities.FreeBoardActivity"></activity>
         <activity android:name=".activities.FreeBoardDetailActivity" />
         <activity android:name=".activities.FreeBoardPostingActivity" />
-        <activity android:name=".activities.IntroActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity
+            android:name=".activities.SplashActivity"
+            android:label="@string/app_name"
+            android:theme="@style/SplashStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.IntroActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
