--- a/dsm-community/package.json
+++ b/dsm-community/package.json
@@ -20,7 +20,8 @@
     "vue-ckeditor2": "^1.18.0",
     "vue-event-calendar": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vue-validator": "^3.0.0-alpha.2"
+    "vue-validator": "^3.0.0-alpha.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
