--- a/application/app/build.gradle
+++ b/application/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.github.florent37:bubbletab:1.0.0'
     compile 'com.android.support:support-v4:26.+'
     testImplementation 'junit:junit:4.12'
+    compile 'at.blogc:expandabletextview:1.0.5'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
