--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "async": "^2.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "crypto": "0.0.3",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
